# dp_cryptomg

./: .gitignore  README.md  dp_cryptomg.py  dp_manual_crypt.py  pyproject.toml  requirements.txt  test_manual_crypt.py
.github/: lint.yaml
.github/workflows/: lint.yaml
lib/: constants.py  dpcryptolib.py  simpleterminalview.py  terminalview.py
